2020-06-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix integaration range for r_ units with tilt
	* tagged as 2.43.3

2020-06-24 Jan Kotanski <jan.kotanski@desy.de>
	* fix double-increase of diffractogram number
	* tagged as 2.43.2

2020-06-24 Jan Kotanski <jan.kotanski@desy.de>
	* add ranges to Diffractogram ToolResults
	* add ToolResults support for Projections
	* add ToolResults support for LineCut
	* tagged as 2.43.1

2020-06-22 Jan Kotanski <jan.kotanski@desy.de>
	* add LavueController.ToolResults
	* add peak finder for diffractogram
	* tagged as 2.43.0

2020-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* update widgets in the config dialog
	* add diffractogram to command line tools
	* tagged as 2.42.3

2020-06-18 Jan Kotanski <jan.kotanski@desy.de>
	* set maximal radial range
	* tagged as 2.42.2

2020-06-18 Jan Kotanski <jan.kotanski@desy.de>
	* add r [pixel] unit to diffractogram tool
	* add setting of colors to the diffractogram tool
	* tagged as 2.42.1

2020-06-16 Jan Kotanski <jan.kotanski@desy.de>
	* add diffractogram tool
	* and single roi aliases
	* fix freeze 1d plot in log scale
	* add progressbar for range calculation
	* tagged as 2.42.0

2020-05-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix for load file names from command lines
	* tagged as 2.41.5

2020-05-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix for negative offset values in multi-source mode
	* tagged as 2.41.4

2020-05-20 Jan Kotanski <jan.kotanski@desy.de>
	* show widget if the corresponding options is set
	* improve ChannekGroupBox changeView()
	* tagged as 2.41.3

2020-04-02 Jan Kotanski <jan.kotanski@desy.de>
	* update help widget
	* tagged as 2.41.2

2020-04-01 Jan Kotanski <jan.kotanski@desy.de>
	* add polling interval for Parameters tool to the configuration
	* add support for non-scalar parameters
	* change layout of Parameters tool
	* tagged as 2.41.1

2020-03-31 Jan Kotanski <jan.kotanski@desy.de>
	* add Parameters tool
	* tagged as 2.41.0
